change id into email

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,10 +2,10 @@
 
 one:
   name: MyString
-  id: MyString
+  email: MyString
   password: MyString
 
 two:
   name: MyString
-  id: MyString
+  email: MyString
   password: MyString
