--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -5,8 +5,14 @@ circle2.png: circle2-4226c656aafeaa4fe09ed9bef9d3e94e.png
 circle2/index.png: circle2-4226c656aafeaa4fe09ed9bef9d3e94e.png
 delete.png: delete-e43ee0fb807b0dafa1505cc3a7238dae.png
 delete/index.png: delete-e43ee0fb807b0dafa1505cc3a7238dae.png
+easy.gif: easy-5ce54c54233dc7bfc50edcb55cf36d55.gif
+easy/index.gif: easy-5ce54c54233dc7bfc50edcb55cf36d55.gif
 edit.png: edit-4f646ed14a0b753da8ef9f3577e728bd.png
 edit/index.png: edit-4f646ed14a0b753da8ef9f3577e728bd.png
+hard.gif: hard-108e5259d317f1f95c4345bd6106ff39.gif
+hard/index.gif: hard-108e5259d317f1f95c4345bd6106ff39.gif
+medium.gif: medium-8551d6baca75610ba519e103cb544af5.gif
+medium/index.gif: medium-8551d6baca75610ba519e103cb544af5.gif
 new_arrow.jpg: new_arrow-5c4479cd0c686555eb8d2d89bf8aaeac.jpg
 new_arrow/index.jpg: new_arrow-5c4479cd0c686555eb8d2d89bf8aaeac.jpg
 paper_background.jpg: paper_background-3b520c062d8c7e2b318a6d978eaa3906.jpg
@@ -23,15 +29,15 @@ star3.gif: star3-490063b34e57c26c1b496f5b9d1ff63a.gif
 star3/index.gif: star3-490063b34e57c26c1b496f5b9d1ff63a.gif
 star4.gif: star4-4b227f3778fec304a8b7516af01c9ec5.gif
 star4/index.gif: star4-4b227f3778fec304a8b7516af01c9ec5.gif
-star5.gif: star5-d6d21b2bf44cadcf474e625e3c9bd020.gif
-star5/index.gif: star5-d6d21b2bf44cadcf474e625e3c9bd020.gif
+star5.gif: star5-e4c377f00ec7a92b63a53fc80ca7e926.gif
+star5/index.gif: star5-e4c377f00ec7a92b63a53fc80ca7e926.gif
 tick.png: tick-683336609948fdd47a2f7d5798bc12f2.png
 tick/index.png: tick-683336609948fdd47a2f7d5798bc12f2.png
 tick2.png: tick2-93c29a70aa0adac3b6960a0c594b55dc.png
 tick2/index.png: tick2-93c29a70aa0adac3b6960a0c594b55dc.png
 application.js: application-66b26249971e296038186f980ed2177b.js
 application/index.js: application-66b26249971e296038186f980ed2177b.js
-application.css: application-c9a2935ddcaa055d7d20ca4edb1a10b5.css
-application/index.css: application-c9a2935ddcaa055d7d20ca4edb1a10b5.css
+application.css: application-397f40e239c53bfe149e05a2fd80cb24.css
+application/index.css: application-397f40e239c53bfe149e05a2fd80cb24.css
 jquery.min.map: jquery.min-6336c5bca4c709e809647cdfcb484d0a.map
 jquery/index.min.map: jquery.min-6336c5bca4c709e809647cdfcb484d0a.map
